# Terraform-Based-LLMOps-Platform-for-Evaluation-Gated-Canary-Deployment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: app-ci.yml  deploy.yml  terraform.yml
configs/releases/: candidate.yaml  stable.yaml
data/evals/: incidents.jsonl
deploy/: README.md
infra/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf
infra/modules/github_actions_role/: main.tf  variables.tf
infra/modules/network/: main.tf  variables.tf
infra/modules/service/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf
scripts/: __init__.py  render_appspec.py  run_evaluation.py
src/llmops_platform/: __init__.py  api.py  evaluation.py  graph.py  main.py  metrics.py  models.py  providers.py  releases.py  routing.py  service.py  settings.py
tests/: test_metrics.py  test_releases.py  test_routing.py
